--- a/webpage-extractor/styles.css
+++ b/webpage-extractor/styles.css
@@ -1,4 +1,37 @@
 /*
+ * ======
+ * reset:
+ * ======
+ */
+
+body.webpage-extractor-dialog > div#webpage-extractor-dialog,
+body.webpage-extractor-dialog > div#webpage-extractor-dialog > ul,
+body.webpage-extractor-dialog > div#webpage-extractor-dialog > ul > li[x-index],
+body.webpage-extractor-dialog > div#webpage-extractor-dialog > div#webpage-extractor-dialog-close,
+body.webpage-extractor-dialog > div#webpage-extractor-dialog.actions-visible > div#webpage-extractor-dialog-actions,
+body.webpage-extractor-dialog > div#webpage-extractor-dialog.actions-visible > div#webpage-extractor-dialog-actions > div.copy-urls,
+body.webpage-extractor-dialog > div#webpage-extractor-dialog.actions-visible > div#webpage-extractor-dialog-actions > div.copy-urls > div,
+body.webpage-extractor-dialog > div#webpage-extractor-dialog.actions-visible > div#webpage-extractor-dialog-actions > div.copy-urls > div > label,
+body.webpage-extractor-dialog > div#webpage-extractor-dialog.actions-visible > div#webpage-extractor-dialog-actions > div.copy-urls > div > select,
+body.webpage-extractor-dialog > div#webpage-extractor-dialog.actions-visible > div#webpage-extractor-dialog-actions > div.copy-urls > div > input,
+body.webpage-extractor-dialog > div#webpage-extractor-dialog.actions-visible > div#webpage-extractor-dialog-actions > div.copy-urls > button[x-action],
+body.webpage-extractor-dialog > div#webpage-extractor-dialog.actions-visible > div#webpage-extractor-dialog-actions > button[x-action] {
+  box-sizing: content-box;
+  line-height: 1em;
+  height: unset;
+  width: unset;
+  margin: unset;
+  padding: unset;
+  font-family: unset;
+  font-size: unset;
+}
+body.webpage-extractor-dialog > div#webpage-extractor-dialog.actions-visible > div#webpage-extractor-dialog-actions > div.copy-urls > button[x-action],
+body.webpage-extractor-dialog > div#webpage-extractor-dialog.actions-visible > div#webpage-extractor-dialog-actions > button[x-action] {
+  border: 2px outset #000;
+  border-radius: 0;
+}
+
+/*
  * =========
  * required:
  * =========
@@ -79,38 +112,41 @@ body.webpage-extractor-dialog > div#webpage-extractor-dialog.actions-visible > d
   position: absolute;
   left: 0;
   right: 0;
-  bottom: 0;
-  height: 3em;
-  background-color: #222;
+  top: 0;
+  transition: top 2s ease 0s;
+  height: 7.5em;
+  background-color: #fff;
+  border-top: 2px solid black;
+  padding: 0.25em;
 }
+body.webpage-extractor-dialog > div#webpage-extractor-dialog.actions-visible > div#webpage-extractor-dialog-actions > div.copy-urls,
 body.webpage-extractor-dialog > div#webpage-extractor-dialog.actions-visible > div#webpage-extractor-dialog-actions > button[x-action] {
   flex-grow: 1;
+  margin-top: auto;
+}
+body.webpage-extractor-dialog > div#webpage-extractor-dialog.actions-visible > div#webpage-extractor-dialog-actions > div.copy-urls {
+  display: flex;
+  flex-direction: column;
+}
+body.webpage-extractor-dialog > div#webpage-extractor-dialog.actions-visible > div#webpage-extractor-dialog-actions > div.copy-urls > div,
+body.webpage-extractor-dialog > div#webpage-extractor-dialog.actions-visible > div#webpage-extractor-dialog-actions > div.copy-urls > button[x-action] {
+  flex-grow: 1;
+}
+body.webpage-extractor-dialog > div#webpage-extractor-dialog.actions-visible > div#webpage-extractor-dialog-actions > div.copy-urls > div {
+  margin-bottom: 0.25em;
+}
+body.webpage-extractor-dialog > div#webpage-extractor-dialog.actions-visible > div#webpage-extractor-dialog-actions > div.copy-urls > button[x-action],
+body.webpage-extractor-dialog > div#webpage-extractor-dialog.actions-visible > div#webpage-extractor-dialog-actions > button[x-action] {
   background-color: #eee;
   color: #222;
-  padding: 1em;
   font-size: 0.85em;
   white-space: nowrap;
+  padding: 0.5em;
+  height: 2em;
+  max-height: 2em;
 }
-
-/*
- * ======
- * reset:
- * ======
- */
-
-body.webpage-extractor-dialog > div#webpage-extractor-dialog,
-body.webpage-extractor-dialog > div#webpage-extractor-dialog > ul,
-body.webpage-extractor-dialog > div#webpage-extractor-dialog > ul > li[x-index],
-body.webpage-extractor-dialog > div#webpage-extractor-dialog > div#webpage-extractor-dialog-close,
-body.webpage-extractor-dialog > div#webpage-extractor-dialog.actions-visible > div#webpage-extractor-dialog-actions,
+body.webpage-extractor-dialog > div#webpage-extractor-dialog.actions-visible > div#webpage-extractor-dialog-actions > div.copy-urls,
+body.webpage-extractor-dialog > div#webpage-extractor-dialog.actions-visible > div#webpage-extractor-dialog-actions > div.copy-urls > button[x-action],
 body.webpage-extractor-dialog > div#webpage-extractor-dialog.actions-visible > div#webpage-extractor-dialog-actions > button[x-action] {
-  box-sizing: content-box;
-  line-height: 1em;
-}
-body.webpage-extractor-dialog > div#webpage-extractor-dialog.actions-visible > div#webpage-extractor-dialog-actions > button[x-action] {
-  height: unset;
-  margin: unset;
-  font-family: unset;
-  border: 2px outset #000;
-  border-radius: 0;
+  margin-top: auto;
 }
